--- a/app/assets/stylesheets/css-exam.scss
+++ b/app/assets/stylesheets/css-exam.scss
@@ -15,6 +15,8 @@
   .rect {
     width: 100px;
     height: 100px;
+    margin: 100px 0 0 100px;
+    border: solid #008080;
   }
 
   .question-01 {
