--- a/app/assets/stylesheets/css-exam.scss
+++ b/app/assets/stylesheets/css-exam.scss
@@ -27,15 +27,19 @@
     .rect {
       border: 1px solid white;
       box-sizing: border-box;
+      display: inline-block;
+      zoom: 1;
     }
   }
 
   .question-03 {
     .rect {
-      padding: 10px;
+      padding: 30px ;
       width: 100%;
       color: white;
       font-size: 1.5rem;
+      margin: 0 auto;
+
     }
   }
 }
